# RandomNumberInterface

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: compiler.cmake
includes/: randbase.hpp  stdrand.hpp
src/: stdrand.cpp
tests/: rand_test.hpp  test.cpp
